@@ -1,6 +1,10 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.136 2005/01/04 21:33:20 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.137 2005/01/04 23:54:59 zhen Exp $
+
+  04 Jan 2005; John Davis <zhen@gentoo.org> modules/generic_stage_target.py,
+  modules/livecd_stage2_target.py:
+  fix for #76530
 
   04 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
   -livecd/cdtar/isolinux-2.08-cdtar.tar.bz2,
